[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcon"
version = "0.0.1"
authors = [
    { name = "Kesara Rathnayake", email = "kesara@fq.nz" }
]
description = "vCon (Virtualized Conversations) JSON data model"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "pydantic>=2.9.2"
]

[tool.setuptools.packages.find]
include = ["*"]
