[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vcon"
authors = [
    { name = "Kesara Rathnayake", email = "kesara@fq.nz" }
]
description = "vCon (Virtualized Conversations) JSON data model"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "pydantic>=2.9.2"
]

[project.urls]
Home = "https://github.com/kesara/vcon/"

[tool.setuptools.packages.find]
include = ["*"]
