[metadata]
name = vcon
version = 0.0.1
author = Kesara Rathnayake
author_email = kesara@fq.nz
description = vCon (Virtualized Conversations) JSON data model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kesara/vcon
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pydantic>=2.9.2
